removed background from project cards, text was hard to read

--- a/src/main.css
+++ b/src/main.css
@@ -120,7 +120,7 @@
 }
 
 #projectCard {
-    background-image: url('./endless-constellation.svg');
+    background-color: #E3E0D3;
     color: #1E1E1E;
     height: 70vh;
     text-align: center;
