--- a/src/main.css
+++ b/src/main.css
@@ -75,7 +75,9 @@
 #profileName {
     display: flex;
     align-items: center;
+    justify-content: space-around;
     color: #E3E0D3;
+    margin-bottom: 10px;
 }
 
 #profilePicture {
@@ -84,8 +86,12 @@
     margin-bottom: 5px;
 }
 
+#profileIcon {
+    width: 25%;
+}
+
 #columnBox {
-    padding: 30px;
+    padding: 20px 30px;
     height: 100%;
     border-radius: 25px;
 }
