Added liquid animation to developer text on front page

--- a/src/main.css
+++ b/src/main.css
@@ -66,6 +66,11 @@
     color: #E3E0D3;
 }
 
+#liquidSlogan {
+    font-weight: 900;
+    color: #E3E0D3;
+}
+
 #skills {
     color: #7B7A6F;
     font-weight: 600;
